--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
     build:
       commands:
         - npm install
+        - npm run webpack
 
 artifacts:
     files:
@@ -11,3 +12,4 @@ artifacts:
       - favicon.ico
       - styles/main.css
       - images/*
+      - dist/bundle.js
