--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
     build:
       commands:
         - npm install
+        - npm install webpack
         - npm run webpack
 artifacts:
     files:
